# Squat-Classifier

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: controlled_feature_extractor_capacity_v1.yaml  controlled_feature_extractor_comparison_v1.yaml  final_protocol_pilot_v1.yaml  full_supervised_matrix_v1.yaml  literature_baseline_capacity_v1.yaml  literature_baseline_capacity_v2.yaml  literature_baseline_full_extension_template_v1.yaml  literature_baseline_full_extension_v1.yaml  literature_baseline_screening_v1.yaml  model_capacity_v2.yaml  model_capacity_v3.yaml  netron_model_export_v1.yaml  overfit_diagnostic_v1.yaml  overfit_diagnostic_v2_with_v3.yaml  pilot_loso_v1.yaml  pilot_loso_v2_with_v3.yaml  real_smoke_training_v1.yaml  smoke_test.yaml  target_conversion_v1.yaml  v3_component_ablation_capacity_v1.yaml  v3_component_ablation_v1.yaml  xgboost_only_completion_v1.yaml
docs/: README.md  ablation_decision_memo_v1.md  controlled_feature_extractor_capacity_v1_report.md  controlled_feature_extractor_comparison_v1_report.md  controlled_feature_extractor_interpretation_notes_for_user.md  data_inventory.md  experiment_protocol.md  final_protocol_pilot_v1_report.md  full_supervised_matrix_v1_report.md  literature_baseline_capacity_v1_report.md  literature_baseline_capacity_v2_report.md  literature_baseline_full_extension_v1_report.md  literature_baseline_interpretation_notes_for_user.md  literature_baseline_screening_v1_report.md  model_architecture_diagrams.md  model_capacity_audit.md  model_capacity_correction_v1.md  model_capacity_v3_report.md  (+24 more)
(+348 files in other folders)
