[project]
name = "squat-imu-experiments"
version = "0.1.0"
description = "Clean-room scaffolding for IMU-only squat posture classification experiments."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "torch",
  "pyyaml",
  "matplotlib",
]

[tool.squat_imu_experiments]
clean_room = true
target_window_length = 512
target_channels = 18
target_num_classes = 5
